--- a/cc.yaml
+++ b/cc.yaml
@@ -1,5 +1,5 @@
 entidad:
-  - .\src\App.js
-  - .\src\Contact.js
-  - .\src\Create.js
-  - .\src\Home.js
+  - src/App.js
+  - src/Contact.js
+  - src/Create.js
+  - src/Home.js
