Close #34 CE 22 Hx Issue URL Package.json
Wrong URL in package.json, changed https://github.com/e89835/RehabTime#readme to http://localhost:3000, as the app homepage was completely blank.

--- a/package.json
+++ b/package.json
@@ -58,5 +58,5 @@
   "bugs": {
     "url": "https://github.com/e89835/RehabTime/issues"
   },
-  "homepage": "https://github.com/e89835/RehabTime#readme"
+  "homepage": "http://localhost:3000"
 }
