--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,6 @@
 version: 2.1
 orbs:
+  codecov: codecov/codecov@3.1.1
   node: circleci/node@5.0.2
 jobs:
   build-and-test:
@@ -16,3 +17,8 @@ workflows:
   build-and-test:
     jobs:
       - build-and-test
+  upload-to-codecov:
+    jobs:
+      - node/test:
+          post-steps:
+            - codecov/upload
