--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  codecov: codecov/codecov@latest
+  codecov: codecov/codecov@3.2.3
   node: circleci/node@5.0.2
 jobs:
   build-and-test:
