--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
 language: node_js
 node_js:
   - 16.3
+services:
+  - docker
 before-install:
   - npm install -g codecov
-cache:
-  directories:
-    - node_modules
+  - docker pull e89835/rehabtime
+  - docker run -d -p 127.0.0.1:80:3000 e89835/rehabtime /bin/sh -c "npm run start"
+  - docker ps -a
+  - docker run e89835/rehabtime /bin/sh -c "npm test"
+#cache:
+#  directories:
+#    - node_modules
 script:
   - npm test
 after_success:
