Close #40 CE 22 H4 Add Docker Travis
Close docker after launch test

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
 before-install:
   - npm install -g codecov
   - docker pull e89835/rehabtime
+before-script:
   - docker run -d -p 127.0.0.1:80:3000 e89835/rehabtime /bin/sh -c "npm run start"
   - docker ps -a
   - docker run e89835/rehabtime /bin/sh -c "npm test"
