Close #40 CE 22 H4 Add Docker Travis
Close docker after test launch in Docker Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,18 @@ node_js:
   - 16.3
 services:
   - docker
+cache:
+  directories:
+    - node_modules
 before-install:
   - npm install -g codecov
   - docker pull e89835/rehabtime
 before-script:
   - docker run -d -p 127.0.0.1:80:3000 e89835/rehabtime /bin/sh -c "npm run start"
-#cache:
-#  directories:
-#    - node_modules
 script:
   - docker ps -a
   - docker run e89835/rehabtime /bin/sh -c "npm test"
-after_success:
-  - docker-compose down
+  - docker run e89835/rehabtime /bin/sh -c "q"
+  - docker run e89835/rehabtime /bin/sh -c "exit"
+#after_success:
+#  - docker-compose down
