--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,9 @@ before-install:
   - npm install -g codecov
   - docker pull e89835/rehabtime
 before-script:
-  - docker run -d -p 127.0.0.1:80:3000 e89835/rehabtime /bin/sh -c "npm run start"
+  - docker run -d -p 127.0.0.1:80:3000 e89835/rehabtime
 script:
   - docker ps -a
-  - docker stop -t 15
-  - docker run e89835/rehabtime /bin/sh -c "npm test"
+  - docker run e89835/rehabtime /bin/sh -c "npm run test"
 #after_success:
 #  - docker-compose down
