--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,7 @@ before-script:
 script:
   - docker ps -a
   - docker run e89835/rehabtime /bin/sh -c "npm run test"
-#after_success:
-#  - docker-compose down
+  - docker run e89835/rehabtime /bin/sh -c "q"
+  - docker run e89835/rehabtime /bin/sh -c "exit"
+after_success:
+  - docker-compose down
