--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,17 @@
 language: node_js
 node_js:
   - 16.3
-before-install:
-  - npm install -g codecov
+services:
+  - docker
 cache:
   directories:
     - node_modules
 script:
-  - npm test
+  - docker run -d -p 127.0.0.1:80:3000 e89835/rehabtime
+  - docker ps -a
+  - docker run e89835/rehabtime /bin/sh -c "npm ci"
+  - docker run e89835/rehabtime /bin/sh -c "npm test"
+  - docker run e89835/rehabtime /bin/sh -c "exit"
 after_success:
+  - docker-compose down
   - codecov
