--- a/.github/workflows/ghcr-image.yml
+++ b/.github/workflows/ghcr-image.yml
@@ -27,4 +27,4 @@ jobs:
       uses: docker/build-push-action@v2
       with: 
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/rehabtime:latest
+        tags: ghcr.io/${{ secrets.DOCKER_USERNAME }}/rehabtime:latest
