--- a/cc.yaml
+++ b/cc.yaml
@@ -11,7 +11,6 @@ test:
   - src/test/Home.test.js
   - src/test/Search.test.js
 
-
 entidad: 
   - src/App.js
   - src/Contact.js
@@ -21,3 +20,6 @@ entidad:
   
 fichero_tareas:
   - doc/fichero_tareas
+  
+  make: 
+  - npm run test
